--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,18 @@
   --santaGrey: #a1a6b1;
   --gooseGrey: #e8e9ec;
   --slateGrey: #7c8392;
+
+  --lavendar: #EDDEF6;
+  --blackChoco: #122109;
+  --paleBlue: #B3EBF2;
+  --columbiaBlue: #CCE5E3;
+  --chocoKisses: #331A1C;
+  --peach: #FEE1B6;
+  --oxfordBlue: #011E49;
+  --antiWhite: #F2F2F2;
+  --smokyBlack: #0D0D0D;
+  --darkCharcoal: #2F2F2F;
+  --americanSilver: #D0D0D0;
 }
 
 * {
