--- a/src/Pages/Home/Home2.css
+++ b/src/Pages/Home/Home2.css
@@ -9,6 +9,10 @@
     flex-direction: row;
 }
 
+.bg__filter {
+    filter: blur(5px);
+}
+
 .home__body__center {
     /* background-color: lightpink; */
 
@@ -20,6 +24,7 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 1rem;
+
 }
 
 .home__body__center {
@@ -119,6 +124,9 @@
     text-align: center;
 
     border: 0.75px solid var(--santaGrey);
+
+    padding: 1rem;
+    text-overflow: ellipsis;
 }
 
 .home__body__center__ex__next {
@@ -208,6 +216,8 @@
     flex-direction: column;
 
     padding: 1rem;
+
+    font-style: italic;
 }
 
 .home__body__center__ex__details__top__left > div {
@@ -275,6 +285,58 @@
     border: 0.75px solid var(--santaGrey);
 }
 
+.home__body__center__rest__details {
+    height: calc(300px + 2rem);
+    grid-column: 1/13;
+
+    /* background-color: lightblue; */
+
+    border: 0.75px solid var(--santaGrey);
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr calc(50px + 1rem) 50px;
+}
+
+.home__body__center__rest__buttons__base {
+    /* background-color: lightcoral; */
+
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.75rem;
+
+    padding-left: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-right: 0.75rem;
+}
+
+.home__body__center__rest__buttons__base > div {
+    background-color: var(--lavendar);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 10px;
+
+    font-weight: bold;
+
+    border: 0.75px solid var(--santaGrey);
+
+    /* padding: 1rem; */
+}
+
+.home__body__center__rest__cta__base {
+    background-color: var(--paleBlue);
+    color: black;
+
+    font-weight: bold;
+    font-size: 1rem;
+
+    border: 0.75px solid var(--santaGrey);
+}
+
 .home__body__center__rest__base {
     height: 50px;
     grid-column: 1/13;
@@ -300,6 +362,45 @@
     grid-column: 1/13;
 
     background-color: lemonchiffon;
+}
+
+.timer-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.time-wrapper {
+    position: relative;
+    width: 80px;
+    height: 60px;
+    font-size: 48px;
+    font-family: "Montserrat";
+
+    color: var(--smokyBlack);
+}
+
+.time-wrapper .time {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(0);
+    opacity: 1;
+    transition: all 0.2s;
+}
+
+.time-wrapper .time.up {
+    opacity: 0;
+    transform: translateY(-100%);
+}
+
+.time-wrapper .time.down {
+    opacity: 0;
+    transform: translateY(100%);
 }
 
 /* Small devices */
