--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,8 @@
   --smokyBlack: #0D0D0D;
   --darkCharcoal: #2F2F2F;
   --americanSilver: #D0D0D0;
+  --charmPink: #c37892;
+  --greenSheen: #78C3A9;
 }
 
 * {
@@ -67,4 +69,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.digits {
+  /* letter-spacing: 0.05em;  Adjust this value to increase/decrease spacing */
+}
+
+.decimal {
+  margin: 0 0.2em; /* Adjust for spacing around the decimal point */
 }
